<resources>
    <string name="app_name">Trendy Steps</string>

<!--    <string name="facebook_app_id">1808287823018581</string>-->
<!--    <string name="fb_login_protocol_scheme">fb1808287823018581</string>-->
<!--    <string name="facebook_client_token">7b643e5846f6fc26071bba89d3eec3a5</string>-->
<!--    <string name="facebook_app_secret">78b25978a30d1c72fe69d43e67f7be75</string>-->


    <string name="image_brand" translatable="false">image brand</string>
    <string name="welcome_to_trendy_steps">Welcome to Trendy Steps</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="your_email">Your email</string>
    <string name="password">password</string>
    <string name="sing_in">Sing In</string>
    <string name="or" translatable="false">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook" translatable="false">Login with Facebook</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_a_account_register">Don’t have a account?Register</string>
    <string name="full_name">Full Name</string>
    <string name="return_password">Return password</string>
    <string name="sing_up">Sing Up</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="loading">loading</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="google_sign_in_failed_msg">Google sign in failed, please retry again later</string>
    <string name="generic_error_msg">Error, Please try again later.</string>

</resources>