<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main_login"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="16dp"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/progressbarlogin"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:elevation="100dp"
                    android:focusable="true"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:textStyle="bold|normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/imageLogin"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_main_login"
                android:contentDescription="image brand" />

            <TextView
                android:id="@+id/txtwelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/welcome_to_trendy_steps"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLogin" />

            <TextView
                android:id="@+id/txtsign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtwelcome"
                app:layout_constraintVertical_bias="0.029"
                app:layout_goneMarginTop="@dimen/_10dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/laProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtsign">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTilLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red"
                    android:layout_marginTop="@dimen/_10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_emailLogin"
                        android:layout_width="343dp"
                        android:layout_height="64dp"
                        android:background="@drawable/desgin_edittext"
                        android:backgroundTint="@color/white"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:hint="@string/your_email"
                        android:padding="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passworrdTilLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red"
                    android:layout_gravity="center"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_PasswordLogin"
                        android:layout_width="343dp"
                        android:layout_height="64dp"
                        android:autofillHints="Password"
                        android:background="@drawable/desgin_edittext"
                        android:backgroundTint="@color/white"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="5dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/sing_in"
                    android:layout_gravity="center"
                    android:textColor="@color/status_text_color"
                    android:textSize="15sp"
                    android:layout_marginTop="@dimen/_10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_10dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/or"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/black" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="343dp"
                    android:layout_height="57dp"
                    android:text="@string/login_with_google"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_log"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/google_icon"
                    android:layout_marginTop="@dimen/_10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="343dp"
                    android:layout_height="57dp"
                    android:text="@string/login_with_facebook"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_log"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/facebook_icon"
                    android:layout_marginTop="@dimen/_10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_forgetPasswrod"
                    android:layout_width="117dp"
                    android:layout_height="18dp"
                    android:background="@drawable/desgin_edittext"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/forget_password"
                    android:textSize="12sp"
                    android:textColor="@color/blue"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_create_count"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:background="@drawable/desgin_edittext"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/don_t_have_a_account_register"
                    android:textSize="12sp"
                    android:textAllCaps="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>